fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 input {
     border: 2px solid #E5E7EB;
+    border-radius: 5px;
 }
 
 input:focus {
@@ -15,7 +16,7 @@ body {
     margin: 0;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    
+    background-color: aliceblue;
 }
 
 .left-container {
@@ -60,7 +61,7 @@ form {
 }
 
 .intro-container p {
-    padding: 20px;
+    
     margin-left: 30px;
 }
 
@@ -86,8 +87,9 @@ form {
 }
 
 button {
-    color: #596D48;
-    border-radius: 10%;
+    color: white;
+    background-color: #596D48;
+    border-radius: 10px;
     padding: 5px;
     margin-left: 30px;
     margin-top: 50px;
@@ -97,4 +99,17 @@ button {
     
     margin-left: 30px;
 }
+
+.footer {
+    display: flex;
+    flex-direction: row;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.footer a {
+    margin-left: 5px;
+    color: #596D48;
+}
+
 
